Requires:
~~~~~~~~~
- CPSDefault > 3.32.1
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- renamed addWikiPage to addPage in page adder template (page adding would fail)
- Made the wiki use the CMF and CPS already existing roles and permissions and
  modified the workflows accordingly.
  Fixes #563 ("CPSWiki is unusable in sections. Which use cases for CPSWiki in
  sections and in general?")
- Made the portal types of CPSWiki follow the Zope, CMF and CPS naming
  conventions: "CPS Wiki" -> "Wiki", "CPS Wiki Page" -> "Wiki Page".
- Added security checks on WikiPage methods.
- Made the methods of Wiki and WikiPage named in a more object oriented manner.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-